--- a/assets/css/levels.css
+++ b/assets/css/levels.css
@@ -305,11 +305,6 @@ h1::before {
     border-radius: 50%;
 }
 
-@keyframes rotate {
-    0% { transform: translate(-50%, -50%) rotate(0deg); }
-    100% { transform: translate(-50%, -50%) rotate(360deg); }
-}
-
 h2 {
     font-size: 1.8rem;
     font-weight: 700;
